Fix search-button overflow

--- a/css/style.css
+++ b/css/style.css
@@ -322,7 +322,7 @@ input[type="radio"].visually-hidden {
 
   flex-grow: 0;
   width: 81px;
-  height: 45px;
+  min-height: 45px;
   padding: 0px;
 
   background-color: #f7e296;
